<resources>
    <string name="app_name">SkywayCableMedia</string>
    <string name="bkcp">book complaint</string>
    <string name="newcp">new customer</string>
    <string name="pr">products</string>
    <string name="py">payments</string>
    <string name="title_activity_products">Products</string>
    <string name="Name">name</string>
    <string name="Address">address</string>
    <string name="cusid">Customer ID</string>
    <string name="skyway">Sky Cable Media</string>
    <string name="Phone_no">Phone no</string>\
    <string name="Alternate_no">Alternate no</string>
    <string name="Tentent_of">tenent of </string>
    <string name="Payment_mode">Payment mode</string>
    <string name="a">Half yearly</string>
    <string name="b">Yearly</string>
    <string name="c">Monthly</string>
    <string name="doc">Documents</string>
    <string-array name="documents_array">
        <item>Aadhaar Card</item>
        <item>Ration card</item>
        <item>Driving Licence</item>
        <item>Passport</item>
        <item>Agreement</item>
    </string-array>
    <string name="upload">Upload</string>
    <string name="Complaint_type">Complaint Type</string>
    <string name="five">Five Channel</string>
    <string name="seven">Seven Bad</string>
    <string name="others">Others</string>
    <string name="submit">Submit</string>
    <string name="connector">Connector</string>
    <string name="spikebuster">Spike buster</string>
    <string name="tvcomp">Tv-Comp Connector</string>
    <string name="rcacomp">RCA-Comp Connector</string>
    <string name="hdmi">HDMI Cable</string>
    <string name="gameselector">Game Selector</string>
    <string name="vgacable">VGA Cable</string>
    <string name="google_play">googleplay</string>
    <string name="facebook">facebook</string>
    <string name="instagram">instagram</string>
    <string name="website">website</string>
    <string name="phone">phone</string>
    <string name="Developer">Developer</string>
    <string name="Report">Report</string>


</resources>
