<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#66BB6A">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:elevation="10dp"
        card_view:cardBackgroundColor="#1B5E20"
        card_view:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/skyway"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>
            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:src="@drawable/mst"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:background="@color/cardview_dark_background">

                <ImageButton
                    android:id="@+id/facebookButton"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="#3b5998"
                    android:clickable="true"
                    android:contentDescription="@string/facebook"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/facebook" />

                <ImageButton
                    android:id="@+id/instagramButton"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="#3f729b"
                    android:contentDescription="@string/instagram"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/instagram" />

                <ImageButton
                    android:id="@+id/webButton"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="#00a0df"
                    android:contentDescription="@string/website"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/website" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:background="@color/cardview_dark_background">

                <ImageButton
                    android:id="@+id/phoneButton"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="#2E7D32"
                    android:contentDescription="@string/phone"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/handset" />

                <ImageButton
                    android:id="@+id/playButton"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="#699F19"
                    android:contentDescription="@string/google_play"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/play" />

                <ImageButton
                    android:id="@+id/mailButton"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="#2ECC71"
                    android:contentDescription="@string/google_play"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/mail" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>